# mcp-kafka

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  server.py
mcp_kafka/: core.py  server.py  tools.py
mcp_kafka/kafka/: __init__.py  cluster.py  consumer.py  topic.py
mcp_kafka/utils/: string.py
